llvm/dev/arith1.llvm.bc.err
/usr/lib/llvm-3.8/bin/llvm-as: llvm/dev/arith1.llvm:34:1: error: expected instruction opcode
ifright3:                                         ; preds = %ifright
^
